--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,15 @@
     border-radius: 24px;
 }
 
-.btn{
+.btn-wrapper{
+    display: flex;
+    justify-content:center;
+    
+}
 
+.btn{
+    margin-left: 4px;
+    margin-right: 4px;
     margin-top: 30px;
     background: #dfe1ef;
     border: none;
